Fix button sizing on smaller screens

--- a/css/brands.css
+++ b/css/brands.css
@@ -17,7 +17,9 @@ button {
   text-align: center;
   vertical-align: middle;
   font-size: 18px;
-  width: 300px;
+  max-width: 300px;
+  min-width: 200px;
+  width: 80%;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: 0.1px;
